@@ -514,9 +514,19 @@ public class TownyEntityListener implements Listener {
 			event.setCancelled(true);
 			return;
 		}
+		
+		// ignore non-Towny worlds.
+		if (!TownyAPI.getInstance().isTownyWorld(event.getEntity().getWorld()))
+			return;
 
 		if (event.getEntity() != null) {
+			
 			LivingEntity livingEntity = event.getEntity();
+
+			// ignore Citizens NPCs
+			if (plugin.isCitizens2() && CitizensAPI.getNPCRegistry().isNPC(livingEntity))
+				return;
+			
 			Location loc = event.getLocation();
 			TownyWorld townyWorld = null;
 
@@ -528,48 +538,25 @@ public class TownyEntityListener implements Listener {
 			}
 
 			// remove from world if set to remove mobs globally
-			if (townyWorld.isUsingTowny()) {
-				if (!townyWorld.hasWorldMobs() && MobRemovalTimerTask.isRemovingWorldEntity(livingEntity)) {
-					if (plugin.isCitizens2()) {
-						if (!CitizensAPI.getNPCRegistry().isNPC(livingEntity)) {
-							// TownyMessaging.sendDebugMsg("onCreatureSpawn world: Canceled "
-							// + event.getEntityType().name() +
-							// " from spawning within "+coord.toString()+".");
-							event.setCancelled(true);
-						}
-					} else
-						event.setCancelled(true);
-				}
-				if (livingEntity instanceof Villager && !((Villager) livingEntity).isAdult() && (TownySettings.isRemovingVillagerBabiesWorld())) {
+			if (!townyWorld.hasWorldMobs() && MobRemovalTimerTask.isRemovingWorldEntity(livingEntity)) {
 					event.setCancelled(true);
-				}
+			}
+			// handle villager baby removal in wilderness
+			if (livingEntity instanceof Villager && !((Villager) livingEntity).isAdult() && (TownySettings.isRemovingVillagerBabiesWorld())) {
+				event.setCancelled(true);
 			}
 			if (TownyAPI.getInstance().isWilderness(loc))
 				return;
 			
+			// handle mob removal in towns
 			TownBlock townBlock = TownyAPI.getInstance().getTownBlock(loc);
-			try {
-				
-				if (townyWorld.isUsingTowny() && !townyWorld.isForceTownMobs()) {
-					if (!townBlock.getTown().hasMobs() && !townBlock.getPermissions().mobs) {
-						if (MobRemovalTimerTask.isRemovingTownEntity(livingEntity)) {
-							if (plugin.isCitizens2()) {
-								if (!CitizensAPI.getNPCRegistry().isNPC(livingEntity)) {
-									// TownyMessaging.sendDebugMsg("onCreatureSpawn town: Canceled "
-									// + event.getEntityType().name() +
-									// " from spawning within "+coord.toString()+".");
-									event.setCancelled(true);
-								}
-							} else
-								event.setCancelled(true);
-						}
-					}
-				}
-				if (livingEntity instanceof Villager && !((Villager) livingEntity).isAdult() && TownySettings.isRemovingVillagerBabiesTown()) {
-					event.setCancelled(true);
-				}
-			} catch (TownyException x) {
-				
+			if (!townyWorld.isForceTownMobs() && !townBlock.getPermissions().mobs && MobRemovalTimerTask.isRemovingTownEntity(livingEntity)) {
+				event.setCancelled(true);
+			}
+			
+			// handle villager baby removal in towns
+			if (livingEntity instanceof Villager && !((Villager) livingEntity).isAdult() && TownySettings.isRemovingVillagerBabiesTown()) {
+				event.setCancelled(true);
 			}
 		}
 	}
